# autorelease_pool_test

./: CMakeLists.txt  test_1.m  test_2.m
